<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tasker Lite</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_name_short">Name</string>
    <string name="profile_delete">Delete profile?</string>

    <!-- preference  -->
    <string name="notification_title">Notification preference</string>
    <string name="notification_state">Notification state</string>
    <string name="notification_state_enable">Enable</string>
    <string name="notification_state_disable">Disable</string>
    <string name="notification_vibro">Vibro</string>
    <string name="notification_light">Light</string>
    <string name="notification_sound">Sound</string>

    <!-- notification  -->
    <string name="app_open">Press to open application</string>

    <!-- text of input  -->
    <string name="task_name">Task name</string>
    <string name="action_name">Action name</string>

    <string name="boolean_state">State</string>
    <string name="ap_ssid_name">Network name</string>
    <string name="ap_ssid_password">Network password</string>

    <string name="t_app_short">Application</string>
    <string name="t_access_point_short">WIFI access point</string>
    <string name="t_mobile_internet_short">Mobile internet</string>
    <string name="t_unlock_screen_short">Unlock screen</string>
    <string name="t_mobile_light_short">Mobile light</string>
    <string name="t_wifi_short">WIFI</string>
    <string name="t_gps_short">GPS</string>

    <string name="a_time_short">Time trigger</string>
    <string name="a_boot_complete_short">Boot trigger</string>
    <string name="a_screen_on">Screen On trigger</string>
    <string name="a_screen_off">Screen Off trigger</string>

    <!-- Description of action list  -->
    <string-array name="actionsList">
        <item>Trigger by time</item>
        <item>Boot complete</item>
        <item>Screen On</item>
        <item>Screen OFF</item>
    </string-array>

    <string-array name="actionsIcons">
        <item>@drawable/a_timer</item>
        <item>@drawable/a_boot_complete</item>
        <item>@drawable/a_screen_on</item>
        <item>@drawable/a_screen_off</item>
    </string-array>

    <!-- Description of task list  -->
    <string-array name="tasksList">
        <item>Turn on/off any application</item>
        <item>Turn on/off wifi access point</item>
        <item>Turn on/off mobile internet</item>
        <item>Turn on/off WIFI</item>
        <item>Unlock screen</item>
        <item>Turn on/off mobile light</item>
        <item>Turn on/off GPS</item>
    </string-array>

    <string-array name="tasksIcons">
        <item>@drawable/t_app</item>
        <item>@drawable/t_access_point</item>
        <item>@drawable/t_three_g</item>
        <item>@drawable/t_wifi</item>
        <item>@drawable/t_unlock_screen</item>
        <item>@drawable/t_mobile_light</item>
        <item>@drawable/t_gps</item>
    </string-array>

</resources>
