<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:minWidth="250dp"
    android:background="@drawable/dialog_list_bg"
    android:orientation="vertical">

    <com.taskerlite.source.AutoResizeTextView
        style="@style/logo_text"
        android:text="@string/t_access_point_short" />

    <EditText
        android:id="@+id/ssidNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/ap_ssid_name" />

    <EditText
        android:id="@+id/ssidPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/ap_ssid_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/boolean_state"
            android:gravity="center"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/switchBtnId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:animationVelocity="8"
                app:offDrawable="@drawable/img_back_off"
                app:onDrawable="@drawable/img_back_on"
                app:thumbDrawable="@drawable/selector_thumb"
                app:thumb_marginBottom="3dp"
                app:thumb_marginLeft="3dp"
                app:thumb_marginRight="3dp"
                app:thumb_marginTop="4dp" />
        </LinearLayout>
    </LinearLayout>

    <ToggleButton android:id="@+id/your_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:background="@android:drawable/btn_default" />

    <LinearLayout
        android:id="@+id/clearRequestLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" />
</LinearLayout>
